# lit-lake

./: .gitignore  .mcpbignore  Cargo.toml  LICENSE  README.md  lit-lake.mcpb  manifest.json  pyproject.toml
.github/workflows/: release.yml
src/: db.rs  docling.rs  embeddings.rs  extraction.rs  gemini.rs  main.rs  preview.rs  zotero.rs
src/litlake/: __init__.py  __main__.py  config.py  db.py  docs.py  logging_utils.py  maintenance.py  migration.py  pdf_runtime.py  preview.py  queue.py  server.py  sql_runtime.py  storage.py  sync.py  text_utils.py  workers.py  zotero.py
src/litlake/backends/: __init__.py  embedding.py  extraction.py
src/litlake/providers/: __init__.py  chunking.py  embedding.py  extraction.py
tests/: __init__.py  test_extraction_contracts.py  test_extraction_html.py  test_extraction_queue_regression.py  test_migration.py  test_pdf_fixtures.py  test_pdf_stdout_safety.py  test_queue.py  test_sql_runtime.py  test_sync_deltas.py  test_sync_notes.py  test_text_utils.py  test_workers_extraction.py
tests/fixtures/: __init__.py  pdf_factory.py
